@@ -1,11 +1,11 @@
 #!/bin/sh
 # @ initialdir = .
-# @ output = seq_merge.out
-# @ error =  seq_merge.err
+# @ output = merge.out
+# @ error =  merge.err
 # @ total_tasks = 1
 # @ cpus_per_task = 1
 # @ tasks_per_node = 4
-# @ wall_clock_limit = 01:00:00
+# @ wall_clock_limit = 00:10:00
 
 export EXTRAE_HOME=@sub_PREFIXDIR@
 
