@@ -2,11 +2,11 @@
 # @ initialdir = .
 # @ output = trace.out
 # @ error =  trace.err
-# @ total_tasks = 2
+# @ total_tasks = 4
 # @ cpus_per_task = 1
-# @ tasks_per_node = 2
-# @ gpus_per_node = 2
+# @ tasks_per_node = 4
 # @ wall_clock_limit = 00:10:00
+# @ tracing = 1
 
-srun ./trace.sh ./mpi_hello
+srun ./trace.sh ./mpi_ping
 
