@@ -1,0 +1,13 @@
+#!/bin/bash
+
+#BSUB -n 4
+#BSUB -oo trace.out
+#BSUB -eo trace.err
+#BSUB -W 00:10
+
+#Workaround for tracing in MN3, make TMPDIR point to an existing dir
+export TMPDIR=$TMPDIR/extrae
+mkdir -p $TMPDIR
+
+mpirun ./trace.sh ./mpi_ping
+
