@@ -6,7 +6,6 @@
 # @ cpus_per_task = 1
 # @ tasks_per_node = 4
 # @ wall_clock_limit = 00:10:00
-# @ tracing = 1
 
-srun ./run.sh ./mpi_ping
+srun ./trace.sh ./mpi_ping
 
