@@ -1,0 +1,11 @@
+#!/bin/sh
+
+#BSUB -n 4
+#BSUB -oo parallel_merge.out
+#BSUB -eo parallel_merge.err
+#BSUB -W 00:10
+
+export EXTRAE_HOME=@sub_PREFIXDIR@
+
+mpirun ${EXTRAE_HOME}/bin/mpimpi2prv -syn -f TRACE.mpits -o trace.prv
+
